# telegrambot

./: .drone.yml  Cargo.toml  README.md
examples/: command.rs  config.rs  get_me.rs  pin.rs  series.rs  simple.rs  tbot.rs
src/: botrun.rs  config.rs  errors.rs  lib.rs  listener.rs  stream.rs  telegram_bot.rs  tgfut.rs  tglog.rs
src/advanced/: advanced_handler.rs  callback_query_handler.rs  channel_post_handler.rs  error_handler.rs  message_handler.rs  mod.rs  post_handler.rs  text_handler.rs
src/api/: a.txt  answer_callback_query.rs  botapi.rs  delete_message.rs  edit_message_caption.rs  edit_message_live_location.rs  edit_message_reply_markup.rs  edit_message_text.rs  forward_message.rs  get_chat.rs  get_chat_administrators.rs  get_chat_member.rs  get_chat_members_count.rs  get_file.rs  get_me.rs  get_updates.rs  get_user_profile_photos.rs  kick_chat_member.rs  leave_chat.rs  mod.rs  pin_chat_message.rs  rawreq.rs  req.rs  resp.rs  send_audio.rs  send_chat_action.rs  send_contact.rs  send_location.rs  send_message.rs  send_venue.rs  stop_message_live_location.rs  tg_api.rs  tgkit.rs  unban_chat_member.rs  unpin_chat_message.rs
src/boreq/: mod.rs  req.rs
src/botapi/: get_updates.rs  mod.rs  req.rs  resp.rs  tgkit.rs
src/types/: callback_query.rs  chat.rs  chat_member.rs  message.rs  mod.rs  primitive.rs  refs.rs  reply_markup.rs  update.rs
src/vision/: amessage.rs  callback_query.rs  command.rs  incoming.rs  message.rs  mod.rs  possibility.rs  reply_message.rs  tgwrapper.rs  vtrait.rs
