[package]
name = "rbotele"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Rust number kit"
repository = "https://github.com/fewensa/rbotele"
keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]

error-chain-mini = "0.2.0"
error-chain-mini-derive = "0.2.0"

typed-builder = "0.3.0"
futures = "0.1.26"
tokio = "0.1.18"
reqwest = "0.9.13"
