[package]
name = "telegrambot"
version = "0.1.4"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Telegram bot api"
repository = "https://github.com/fewensa/telegrambot"
keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]

error-chain-mini = "0.2.0"
error-chain-mini-derive = "0.2.0"

futures = "0.1.26"
tokio = "0.1.18"
reqwest = "0.9.14"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-value = "0.5.3"

slog = "2.4.1"
slog-term = "2.4.0"
lazy_static = "1.3.0"

text-reader = "0.1.1"
rstring-builder = "0.1.3"
